--- a/1.html
+++ b/1.html
@@ -23,11 +23,11 @@
   <p style="margin-top:94px;">궁전 앞에는 아직까지 아무것도 움직이지 않았다. 물은 죽었다. 망령들의 부대는 수길을 떠나지 않았다.
   생생하나 미지근한 숨결을 깨워 나는 걸어갔다. 보석들이 바라다보고 있었다. 날개들이 소리 없이 일어났다.
   </p>
-  나는 전나무 사이에서 머리를 헐클어뜨리고 있는 금발의 폭포를 보고 웃었다. 은빛 꼭대기에서 나는 여신을 알아보았다.
+  나는 전나무 사이에서 머리를 헝클어뜨리고 있는 금발의 폭포를 보고 웃었다. 은빛 꼭대기에서 나는 여신을 알아보았다.
   <img src="waterfall.jpg" with="900%">
   <br><br><br>
   그리고 나는 하나하나 베일을 걷어 올렸다. 길에서는 팔을 흔들어서, 평원에서는 수탉에게 그녀를 알려 주었다.
-  대도시에서 그녀는 종탑과 궁중 사이로 동망갔다. 거지처럼 대리석 부두를 달려가며, 나는 그녀를 쫓아갔다.
+  대도시에서 그녀는 종탑과 궁중 사이로 도망갔다. 거지처럼 대리석 부두를 달려가며, 나는 그녀를 쫓아갔다.
 
   월계수 숲 가까이, 길 위에서 나는 그녀의 진한 베일로 그녀를 감싸 안았다. 그리고 나는 그녀의 거대한 육체를 조금 맛보았다
   새벽과 아이는 숲 아래로 떨어졌다.
